fix Article template overflow that resulted from fix for #660

--- a/src/components/templates/Articles/styles.module.scss
+++ b/src/components/templates/Articles/styles.module.scss
@@ -2,7 +2,6 @@
 @import 'theme/longform.scss';
 
 .banner {
-	max-height: $screenSmall;
 	h1 {
 		width: 100%;
 		font-size: $fontSizeDisplay;
@@ -24,16 +23,40 @@
 		}
 	}
 	.role {
-		width: 200px;
-		order: 3;
+		width: $spacingSmall;
 		h2 {
 			@include small-caps;
-			transform: translateX(-$spacingLarge) rotate(-90deg);
+			transform: translateX(-$spacingMedium) rotate(-90deg);
 			font-size: $fontSizeXSmall;
 			color: $grey;
-			width: 60ch;
+			width: 20ch;
 			text-align: center;
 		}
+	}
+}
+.featuredImage {
+	margin-bottom: -$spacingMedium * 4;
+	position: relative;
+	overflow: hidden;
+	img {
+		box-shadow: $elevation2;
+		width: $screenMedium;
+		object-fit: cover;
+		height: 100%;
+		max-height: 468px;
+		position: relative;
+		z-index: 10;
+	}
+	&::before {
+		content: '';
+		position: absolute;
+		background: $white;
+		display: block;
+		height: 68%;
+		top: 32%;
+		width: 110vw;
+		left: 50%;
+		margin-left: -55vw;
 	}
 }
 
@@ -42,16 +65,7 @@
 	padding: 6rem 3rem;
 	font-family: $fontFamilySecondary;
 	background: white;
-	.featuredImage {
-		display: block;
-		margin: -12rem auto -6rem;
-		box-shadow: $elevation2;
-		width: $screenMedium;
-		object-fit: cover;
-		height: 100%;
-		max-height: 468px;
-		position: relative;
-	}
+	overflow-x: hidden;
 	a {
 		color: inherit;
 		text-decoration: underline;
@@ -126,16 +140,21 @@
 			}
 		}
 		.role {
-			width: 2ch;
+			h2 {
+			}
+		}
+	}
+
+	.featuredImage {
+		margin-bottom: $spacingBase * -8;
+		img {
+			max-width: 100%;
+			height: 40vh;
+			max-height: $screenSmall;
+			margin: 2rem auto -6rem;
 		}
 	}
 	.markdownContainer {
 		padding: $spacingLarge $spacingSmall $spacingMedium;
-		.featuredImage {
-			max-width: 100%;
-			height: 40vh;
-			max-height: $screenSmall;
-			margin: -10rem auto -6rem;
-		}
 	}
 }
